tests/NormalTests/paczka1/small_fuzzy/27138326.err
Error in line 3: 29bqlLFPo8L S492 90,8
Error in line 1: i6j S971 100,0
Error in line 4: 29bqlLFPo8L S971 22,5
Error in line 8: i6j A167 71,8
